Added api doc + csrf header in cors
